<resources>
    <string name="app_name">纺织ERP</string>
    <string name="sysInfo">系统信息</string>
    <string name="userName">用  户 名:</string>
    <string name="NetStatus">连接状态:</string>
    <string name="ServerIP">服务器IP:</string>
    <string name="port">端       口:</string>
    <string name="connecting">连接中...</string>
    <string name="connected">连接</string>
    <string name="disconnected">断开</string>
    <string name="clickConnect">点击连接</string>
    <string name="vcanslogin">VCANS 登录</string>
    <string name="autoLogin">自动登录</string>
    <string name="login">登录</string>
    <string name="nologin">未登录</string>
    <string name="favorite">收藏车</string>
    <string name="history">历史</string>
    <string name="set">设置</string>
    <string name="set1">操作信息录入</string>
    <string name="detailInfo">详细信息</string>
    <string name="errorInfo">错误信息</string>
    <string name="tipInfo">提示信息</string>
    <string name="sysSet">系统设置</string>
    <string name="ipAndPort">地址/端口</string>
    <string name="ip">地址</string>
    <string name="picture">图像</string>
    <string name="ReduceNumber">缩小数</string>
    <string name="ReduceRate">缩小比</string>
    <string name="cutPhoto">拍照后裁剪</string>
    <string name="other">其它</string>
    <string name="encrypto">加密数据</string>
    <string name="YPHistoryNum">  样品查询历史数</string>
    <string name="about">关于</string>
    <string name="version">版       本:</string>
    <string name="language">语言</string>
    <string name="english">English</string>
    <string name="chinese">中文</string>
    <string name="originalPic">原图</string>
    <string name="restarting">重启中...</string>
    <string name="gendan">跟单大师</string>
    <string name="peibuin">坯布进仓</string>
    <string name="chukutongzi">出库通知单</string>
    <string name="wuliao">在库物料</string>
    <string name="baozhuang">包装性质</string>
    <string name="mianliao">面料性质</string>
    <string name="makou">码扣</string>
    <string name="remark">说明</string>
    <string name="weizhi">位置</string>
    <string name="pishu">匹数</string>
    <string name="num">数量</string>
    <string name="infoList">信息列表</string>
    <string name="goodsLoad">物料信息加载</string>
    <string name="infoNull">信息为空</string>
    <string name="noSelected">未选择数据</string>
    <string name="isNUll">数据不能为空</string>
    <string name="quannengPei">全能坯</string>
    <string name="rspei">染色坯</string>
    <string name="sezhiPei">色织坯</string>
    <string name="yinhuaPei">印花坯</string>
    <string name="banChenPin">半成品</string>
    <string name="product">成品</string>
    <string name="juanZhuang">卷装</string>
    <string name="piZhuang">匹装</string>
    <string name="baoZhuang">包装</string>
    <string name="pici">批次号</string>
    <string name="toupei">生产投坯</string>
    <string name="RZPlanId">染整计划号</string>
    <string name="CompanyOrder">公司订单号</string>
    <string name="RZFactoryId">染整厂编号</string>
    <string name="ProType">生产类型</string>
    <string name="ProTypeId">生产类型编号</string>
    <string name="RZFactoryName">染整厂名称</string>
    <string name="Gongxu">工序选择</string>
    <string name="huifu">回修</string>
    <string name="InitPBTR">初始坯布投入</string>
    <string name="delPiShuNumIsNull">扣除匹数或数量不能为空!</string>
    <string name="backPre">无工序信息！,请返回上一步</string>
    <string name="proColor">投入颜色</string>
    <string name="productin">成品入库</string>
    <string name="DelPiShu">扣除匹数</string>
    <string name="DelNum">扣除数量</string>
    <string name="CheckStatus">品检状态</string>
    <string name="KGM">KG转M系数</string>
    <string name="Color">花型颜色(产出)</string>
    <string name="Unit">单位</string>
    <string name="price">单价</string>
    <string name="gongyi2_1">工艺二1</string>
    <string name="gongyi2_2">工艺二2</string>
    <string name="gongyi2_3">工艺二3</string>
    <string name="gongyiId2_1">工艺二编号1</string>
    <string name="gongyiId2_2">工艺二编号2</string>
    <string name="gongyiId2_3">工艺二编号3</string>
    <string name="machining">加工送仓库</string>
    <string name="OrderType">单据类型</string>
    <string name="machiFactoryId">加工厂编号</string>
    <string name="AimFactoryId">目的厂编号</string>
    <string name="AimFactoryName">目的厂名称</string>
    <string name="ColorAllOut">颜色全部出仓</string>
    <string name="fahuo">发货</string>
    <string name="shouhuo">收货</string>
    <string name="rztask">任务简报</string>
    <string name="rztask2">任务简报二</string>
    <string name="rztask3">任务简报三</string>
    <string name="rztask4">任务简报四</string>
    <string name="rztask5">任务简报五</string>
    <string name="gongyi">工艺选择</string>
    <string name="machiFactoryId1">加工厂编号</string>
    <string name="rzCost">染整费用</string>
    <string name="costSelect">费用选择</string>
    <string name="costSelectId">费用选择编号</string>
    <string name="costSelectName">费用选择名称</string>
    <string name="cost">费用</string>
    <string name="gdDirectOut">直接出货</string>
    <string name="gdBakModule">备用模块</string>
    <string name="gdBakModule1">备用模块一</string>
    <string name="gdBakModule2">备用模块二</string>
    <string name="gdBakModule3">备用模块三</string>
    <string name="gdBakModule4">备用模块四</string>
    <string name="gdBakModule5">备用模块五</string>
    <string name="gdBakModule6">备用模块六</string>
    <string name="xgdBakModule1">备用模块01</string>
    <string name="xgdBakModule2">备用模块02</string>
    <string name="xgdBakModule3">备用模块03</string>
    <string name="xgdBakModule4">备用模块04</string>
    <string name="xgdBakModule5">备用模块05</string>
    <string name="xgdBakModule6">备用模块06</string>
    <string name="xgdBakModule7">备用模块07</string>
    <string name="xgdBakModule8">备用模块08</string>
    <string name="xgdBakModule9">备用模块09</string>
    <string name="xgdBakModule10">备用模块10</string>
    <string name="gdQuery">综合查询</string>
    <string name="gdQuery01">综合查询01</string>
    <string name="gdQuery02">综合查询02</string>
    <string name="gdQuery03">综合查询03</string>
    <string name="gdQuery04">综合查询04</string>
    <string name="gdQuery05">综合查询05</string>
    <string name="gdQuery06">综合查询06</string>
    <string name="gdQuery07">综合查询07</string>
    <string name="gdQuery08">综合查询08</string>
    <string name="YP">样品管家</string>
    <string name="YPQuery">样品查询</string>
    <string name="YPBarcode">样品条码</string>
    <string name="offlineMode">离线模式</string>
    <string name="imageList">图片列表</string>
    <string name="noData">无数据</string>
    <string name="pinhao">品号</string>
    <string name="exposition">展会询样</string>
    <string name="CusBarcode">客户条码</string>
    <string name="CusName">客户简称</string>
    <string name="CusCard">客户名片</string>
    <string name="mpsm">名片扫描</string>
    <string name="autoScan">自动扫描</string>
    <string name="YPImage">样品图片</string>
    <string name="replaceImage">替换图片</string>
    <string name="upload_date">上传更新</string>
    <string name="Rereplace">连续替换</string>
    <string name="replaceOne">替换当前</string>
    <string name="browserImage">浏览图片 </string>
    <string name="imageListTip">图片列表 (提示：可长按图片替换)</string>
    <string name="imageWatchReplace">图片查看/替换</string>
    <string name="image">图片</string>
    <string name="barcode">条形码</string>
    <string name="mpsb">名片收集</string>
    <string name="mlqd">面料清单</string>
    <string name="yyqd">样衣清单</string>
    <string name="qdmk">清单模块</string>
    <string name="dwsp">待我审批</string>
    <string name="wysp">我已审批</string>
    <string name="yywp">已阅未批</string>
    <string name="dwyd">待我阅读</string>
    <string name="wyyd">我已阅读</string>
    <string name="XX">信息中心</string>
    <string name="btn_close">关闭</string>
    <string name="btn_delete">删除</string>
    <string name="btn_clear">清除</string>
    <string name="btn_login">登录</string>
    <string name="chk_save_pwd">记住密码</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="btn_reg">注册</string>
    <string name="btn_next">下一步</string>
    <string name="btn_save">保存</string>
    <string name="btn_upload">上传</string>
    <string name="btn_load">加载</string>
    <string name="btn_download">下载</string>
    <string name="btn_query">查询</string>
    <string name="btn_back">返回</string>
    <string name="scanQrcdoe">二维码扫描</string>
    <string name="cpyDeviceName">复制设备名称</string>
    <string name="goodsId">物料编号</string>
    <string name="goodsDescribe">物料描述</string>
    <string name="storePiShu">库存匹数</string>
    <string name="storeNum">库存数量</string>
    <string name="zaizhiPiShu">在制匹数</string>
    <string name="zaizhiNum">在制数量</string>
    <string name="PurchaseId">采购合同号</string>
    <string name="storeDescribe">存货描述</string>
    <string name="innerId">内部ID</string>
    <string name="gongxuId">工序编号</string>
    <string name="gongxuName">工序名称</string>
    <string name="sendGoodsNum">发货数量</string>
    <string name="orderNum">订单数量</string>
    <string name="SupplierId">供应商</string>
    <string name="CheckStatusId">品检状态编号</string>
    <string name="CheckName">品检状态名称</string>
    <string name="flower">花型</string>
    <string name="color2">颜色</string>
    <string name="chachuPiShu">产出匹数</string>
    <string name="chachuNum">产出数量</string>
    <string name="gongyiId">工艺编号</string>
    <string name="gongyiName">工艺名称</string>
    <string name="date">日期</string>
    <string name="remark1">备用一</string>
    <string name="remark2">备用二</string>
    <string name="remark3">备用二</string>
    <string name="remark4">备用四</string>
    <string name="remark5">备用五</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="stop">强制结束</string>
    <string name="busy">已存在一个请求正在执行</string>
    <string name="wait">等待</string>
    <string name="askQuit">您确定退出吗？</string>
    <string name="askQuitt">您确定要清除所有数据</string>
    <string name="askQuittt">您确定要同步上传所有数据</string>
    <string name="askDelete">您确定删除吗？</string>
    <string name="askClear">您确定清除吗？</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="quit">退出</string>
    <string name="noSDCard">无法读取SD卡,系统将无法正常运行! 可能原因：手机为【U盘模式】</string>
    <string name="noSetIpAndPort">未设置IP地址和端口!</string>
    <string name="autoLoginning">用户自动登录中...</string>
    <string name="loginFail">用户登录失败或网络超时!</string>
    <string name="loginSuccess">登录成功</string>
    <string name="noSetIpAndP3ort">未设置IP地址和端口!</string>
    <string name="noLoginWait">系统已退出或未登录，稍后重试</string>
    <string name="noPower">抱歉，您无此权限</string>
    <string name="serDisconnect">服务器未连接</string>
    <string name="imgDeleted">该图片已被删除</string>
    <string name="defaultImageNoWatch">默认图片不可查看</string>
    <string name="inputKey">请输入关键字</string>
    <string name="autoLogined">已为您自动登录</string>
    <string name="rememberValid">用户名和密码不为空时记住有效</string>
    <string name="userNoNull">用户名和密码不能为空</string>
    <string name="historyInNull">历史数据不能为空  </string>
    <string name="ipError">IP地址输入有误  </string>
    <string name="urlError">url输入有误  </string>
    <string name="setSucc">设置完成</string>
    <string name="setFail">设置失败</string>
    <string name="partDone">部分处理完成</string>
    <string name="sendFailOrDisconnect">发送失败或接服务未连</string>
    <string name="uploadSuccess">上传完成</string>
    <string name="partUploadError">部分上传完成,含发送错误的数据ID:</string>
    <string name="sendErrorId">发送错误的数据ID</string>
    <string name="waitReponse">等待服务端处理...</string>
    <string name="securityRequest">安全请求...</string>
    <string name="RequestError">请求失败</string>
    <string name="done">完成</string>
    <string name="sendDone">发送完成</string>
    <string name="waitReceive">等待接收...</string>
    <string name="datareplace">数据已存在</string>
    <string name="freeDisconnect">服务空闲断开，请点击右上角重连</string>
    <string name="pickTime">选取时间</string>
    <string name="pickDate">选取日期</string>
    <string name="YPQuerying">样品查询中...</string>
    <string name="searching">搜索中...</string>
    <string name="noPath">路径不存在</string>
    <string name="nexting">即将进入下一步...</string>
    <string name="loadSuccess">加载成功</string>
    <string name="saveSuccess">保存成功</string>
    <string name="saveFail">保存失败</string>
    <string name="barcdoeInvalid">该条码未通过验证!</string>
    <string name="imagenotSelected">未选择图片</string>
    <string name="firstPage">已经是第一张</string>
    <string name="lastPage">到了最后一张</string>
</resources>