<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/chkCusName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/CusName"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/chkCusPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/CusCard"
            android:textColor="@android:color/black" />
         <CheckBox
            android:id="@+id/chkCusmpsm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/mpsm"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/chkPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/price"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/chkNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/num"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/chkAutoScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/autoScan"
            android:textColor="@android:color/black" />
    </LinearLayout>
    
    <LinearLayout
        
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"
        android:gravity="bottom|center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnOk"
            android:layout_width="130dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_style"
            android:text="@string/btn_save"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="130dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_style"
            android:text="@string/cancle"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>