<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingLeft="30dp" >

    <LinearLayout
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvCompanyOrderId0"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:gravity="right"
            android:text="@string/CompanyOrder"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#CCCCCC" />

        <TextView
            android:id="@+id/tvCompanyOrderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="公司订单号"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvPurchaseId0"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:gravity="right"
            android:text="@string/PurchaseId"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#CCCCCC" />

        <TextView
            android:id="@+id/tvPurchaseId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="采购合同号"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvGoodsId0"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:gravity="right"
            android:text="@string/goodsId"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#CCCCCC" />

        <TextView
            android:id="@+id/tvGoodsId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="物料编号"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvGoodsDescribe0"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:gravity="right"
            android:text="@string/goodsDescribe"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#CCCCCC" />

        <TextView
            android:id="@+id/tvGoodsDescribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="物料描述"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvStoreDescribe0"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:gravity="right"
            android:text="@string/storeDescribe"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#CCCCCC" />

        <TextView
            android:id="@+id/tvStoreDescribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="存货描述"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvGPiShu0"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:gravity="right"
            android:text="@string/storePiShu"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#CCCCCC" />

        <TextView
            android:id="@+id/tvGPiShu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="匹数"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvGNum0"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:gravity="right"
            android:text="@string/storeNum"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#CCCCCC" />

        <TextView
            android:id="@+id/tvGNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="数量"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />
    </LinearLayout>

</LinearLayout>