<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    <include
        android:id="@+id/include01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/main_title" />

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_below="@id/include01"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/border"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvFactoryName"
            style="@style/txtTitle"
            android:layout_width="90dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/YPBarcode" />

        <EditText
            android:id="@+id/txtOutNotifyId"
            style="@style/txtStyle"
            android:layout_width="130dp" />

        <!--
        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/btnScanBarcode"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/qrcode_scan"
            android:textColor="@android:color/black"/>
        -->

        <include
            android:id="@+id/inQrcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/qrcode" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >

        <CheckBox
            android:id="@+id/chkOffLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/offlineMode"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layDownload"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnDownload"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:background="@drawable/btn_style"
            android:text="@string/btn_download"
            android:visibility="gone"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <include
        android:layout_below="@id/LinearLayout"
        android:id="@+id/inNext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/next" />
      <!--<ScrollView-->
          <!--android:layout_below="@id/inNext"-->
                   <!--android:layout_width="fill_parent"-->
                   <!--android:layout_height="match_parent"-->
                   <!--android:fillViewport="true"-->
          <!--&gt;-->
    <LinearLayout
        android:id="@+id/layImgYP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/tvImageList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#cccccc"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvImageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:text="@string/imageList"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <com.vcans.adapter.HorizontalListView
            android:id="@+id/horizon_listview"
            android:layout_width="match_parent"
            android:layout_height="150dp" >
        </com.vcans.adapter.HorizontalListView>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/inNext"
        android:layout_above="@id/layImgYP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/layInfoList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#99CCFF"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:text="@string/infoList"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tvPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:enabled="false"
                android:text="(0/1)"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/tvLoad"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="2dp"
                    android:background="@null"
                    android:text="@string/btn_clear"
                    android:textColor="#0000FF" />
            </LinearLayout>
        </LinearLayout>




            <ListView
                android:id="@+id/lvProdct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                ></ListView>



    </LinearLayout>
      <!--</ScrollView>-->



</RelativeLayout>